# ai-rs

./: .gitignore  README.md
ai-rs/: Cargo.toml  Dockerfile  README.md
ai-rs/src/: cli.rs  config.rs  error.rs  main.rs  openai.rs
conversation-distiller-rs/: Cargo.toml  README.md
conversation-distiller-rs/config/: tone_profiles.json
conversation-distiller-rs/input/: sample_conversation.json
conversation-distiller-rs/src/: config.rs  conversation_parser.rs  distiller_engine.rs  error.rs  logger.rs  main.rs  openai_client.rs
credit-risk-engine-rs/: Cargo.toml  README.md
credit-risk-engine-rs/input_profiles/: sample_applicant.json
credit-risk-engine-rs/src/: config.rs  error.rs  main.rs  models.rs  openai_client.rs  risk_analyzer.rs  validator.rs
knowledge-engine-rs/: Cargo.toml  README.md
knowledge-engine-rs/data/: knowledge_base.sqlite
knowledge-engine-rs/migrations/: 20250622_initial_schema.sql
knowledge-engine-rs/src/: config.rs  database.rs  error.rs  main.rs  openai_client.rs  query_engine.rs
knowledge-engine-rs/src/pipeline/: chunking.rs  indexing.rs  ingestion.rs  mod.rs
narrative-visualizer-rs/: Cargo.toml  README.md
narrative-visualizer-rs/input/: sample_story.txt
narrative-visualizer-rs/src/: error.rs  main.rs  openai_client.rs  output_assembler.rs
narrative-visualizer-rs/src/pipeline/: mod.rs  stage_1_scene_detection.rs  stage_2_prompt_generation.rs  stage_3_image_generation.rs
rust-analyzer-ai/: Cargo.toml  README.md
rust-analyzer-ai/src/: analyzer.rs  config.rs  error.rs  files.rs  main.rs  openai.rs
rust-architect-ai/: Cargo.toml  README.md
rust-architect-ai/output/: architecture.md
rust-architect-ai/src/: config.rs  diagram_generator.rs  error.rs  logger.rs  main.rs  openai_client.rs  project_scanner.rs  renderer.rs
sentiment-engine-rs/: Cargo.toml  README.md
sentiment-engine-rs/config/: sentiment_labels.json
sentiment-engine-rs/src/: config.rs  constants.rs  error.rs  logger.rs  main.rs  openai_client.rs  sentiment_analyzer.rs
