[package]
name = "rust-architect-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with pure-Rust TLS
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Securely load environment variables from .env files
dotenvy = "0.15"

# Boilerplate-free custom error types
thiserror = "1.0"

# Powerful command-line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Structured logging framework
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Efficient recursive directory traversal
walkdir = "2"

# A powerful templating engine for generating structured text output
handlebars = "5.1"

# For colored terminal output
colored = "2.1"

# The standard Rust crate for regular expressions.
regex = "1"

# For one-time initialization of static values, like our compiled regex.
once_cell = "1"
